# crm

./: .env_example  .gitignore  README.md  alembic.ini  ed.txt  pyproject.toml  requirements.txt  server.py
app/: main.py  utils.py
app/api/: deps.py
app/core/: config.py  constants.py
app/crud/: __init__.py  base.py  crud_cancelation.py  crud_cancellation.py  crud_client.py  crud_inventory.py  crud_inventory_record.py  crud_invoice.py  crud_invoice_record.py  crud_opening.py  crud_order.py  crud_product.py  crud_product_category.py  crud_raw.py  crud_raw_category.py  crud_shop.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/models/: models.py
app/schemas/: __init__.py  cancelation.py  cancelation_record.py  cancellation.py  cancellation_record.py  client.py  file.py  inventory.py  inventory_record.py  invoice.py  invoice_record.py  opening.py  order.py  permissions.py  product.py  product_category.py  product_categoty.py  product_raw_relation.py  raw.py  raw_category.py  raw_remains_detail.py  raw_usage_standards.py  shop.py  user.py  usershop.py
app/views/: users.py
migrations/: env.py
migrations/versions/: 03609f09d4e9_fix_base_class.py  05b8081b7bf0_update_database.py  079deb98c762_small_fix_cancelation.py  080b5c3bf420_add_rawremainsdetail_invoice_.py  0b23ca6f81e3_small_fix_cancellation.py  1dcf8d432c00_fix_delete_product_from_.py  2021-03-25_91a68f86769b_create_tables.py  2021-03-26_25b8453aa45b_add_remark_for_order.py  2021-03-28_47a21db1cfa4_add_price.py  21cb1156e4f2_update_raw_model.py  (+75 more)
src/: config.py  main.py
(+33 files in other folders)
