[tool.poetry]
name = "baloon-crm"
version = "0.1.0"
description = ""
authors = ["Petr <p>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
asyncpg = "^0.20.1"
gino = {extras = ["starlette"], version = "^1.0.1"}
fastapi = "^0.60.0"
uvicorn = "^0.11.6"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
requests = "^2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
