[tool.poetry]
name = "baloon-crm"
version = "0.1.0"
description = ""
authors = ["Petr <p>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
asyncpg = "^0.22.0"
fastapi = "^0.63.0"
uvicorn = "^0.11.6"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
psycopg2-binary = "^2.8.5"
sqlalchemy = "^1.4"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
python-dotenv = "^0.14.0"
email-validator = "^1.1.1"
emails = "^0.6"
python-multipart = "^0.0.5"
boto3 = "^1.16.9"
dadata = "^20.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
requests = "^2.25.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
